# smart_control_security

./: .gitignore  CONTRIBUTING.md  README.md  contexto.md  diseño_inicial.md
.cursor/: mcp.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: admin-web-ci.yml  backend-ci.yml  database-auto-migrate.yml  database-manual-ops.yml  demo-web-ci.yml  mobile-ci.yml
admin-web/: .env.example  .eslintrc.json  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
admin-web/app/: globals.css  layout.tsx  page.tsx
admin-web/components/: .gitkeep
admin-web/hooks/: .gitkeep
admin-web/lib/: utils.ts
admin-web/public/: .gitkeep
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/analytics/: .gitkeep
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py
backend/app/db/: .gitkeep
backend/app/models/: .gitkeep
backend/app/modules/system/: router.py  schemas.py
backend/app/services/: .gitkeep
backend/app/workers/: .gitkeep
backend/database/: README.md
backend/database/analytics/: README.md  _template_mview.sql.example
backend/database/explore/: README.md
backend/database/init/: 01_extensions.sql  README.md
backend/database/manual_ops/: README.md  _template_manual_op.sql.example
backend/database/migrations/: README.md  env.py
backend/database/migrations/versions/: .gitkeep
backend/database/seeds/: README.md  _template_seed.sql.example
backend/database/views/: README.md  _template_view.sql.example
backend/tests/: conftest.py  test_health.py
demo-web/: .env.example  .eslintrc.json  .gitignore  .prettierrc.json  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
demo-web/prisma/: schema.prisma  seed.ts
demo-web/prisma/migrations/20260610195102_add_novedades_y_alertas_polimorfica/: migration.sql
demo-web/prisma/migrations/20260610230924_init/: migration.sql
demo-web/prisma/migrations/20260611030000_add_refrigerios_y_foto_nullable/: migration.sql
demo-web/src/: middleware.ts
demo-web/src/app/: globals.css  layout.tsx  page.tsx
demo-web/src/app/(guardia)/: layout.tsx
demo-web/src/app/(supervisor)/: layout.tsx
demo-web/src/components/guardia/: BotonPanico.tsx  BotonRefrigerio.tsx  CameraCapture.tsx  MarcaWizard.tsx  NovedadForm.tsx
demo-web/src/components/shared/: AutoRedirect.tsx  BottomNav.tsx  FechaSelector.tsx  Header.tsx  Logo.tsx  Modal.tsx  (+6 more)
demo-web/src/lib/: auth.ts  csv.ts  estado-guardia.ts  geofence.ts  prisma.ts  rango-fecha.ts  reporte-jornada.ts  s3.ts  utils.ts  validations.ts
docs/: PLAN.md  arquitectura.md  aws-bootstrap.md  decisiones-tecnicas.md  demo-web-plan.md  funcionalidades-admin-web.md  funcionalidades-app-movil.md  funcionalidades-backend.md  modelo-datos.md  roadmap-fases.md  seguridad.md
mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
mobile/lib/: app.dart  main.dart
mobile/test/: widget_test.dart
scripts/aws/: README.md  bootstrap-fase1.sh
(+45 files in other folders)
